// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clearRefinements() with refinements calls twice render(<ClearAll props />, container) 1`] = `
{
  "cssClasses": {
    "button": "ais-ClearRefinements-button",
    "disabledButton": "ais-ClearRefinements-button--disabled",
    "root": "ais-ClearRefinements",
  },
  "hasRefinements": true,
  "refine": [Function],
  "templateProps": {
    "templates": {
      "resetLabel": "Clear refinements",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "resetLabel": false,
    },
  },
}
`;

exports[`clearRefinements() with refinements calls twice render(<ClearAll props />, container) 2`] = `
{
  "cssClasses": {
    "button": "ais-ClearRefinements-button",
    "disabledButton": "ais-ClearRefinements-button--disabled",
    "root": "ais-ClearRefinements",
  },
  "hasRefinements": true,
  "refine": [Function],
  "templateProps": {
    "templates": {
      "resetLabel": "Clear refinements",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "resetLabel": false,
    },
  },
}
`;

exports[`clearRefinements() without refinements calls twice render(<ClearRefinements props />, container) 1`] = `
{
  "cssClasses": {
    "button": "ais-ClearRefinements-button",
    "disabledButton": "ais-ClearRefinements-button--disabled",
    "root": "ais-ClearRefinements",
  },
  "hasRefinements": false,
  "refine": [Function],
  "templateProps": {
    "templates": {
      "resetLabel": "Clear refinements",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "resetLabel": false,
    },
  },
}
`;

exports[`clearRefinements() without refinements calls twice render(<ClearRefinements props />, container) 2`] = `
{
  "cssClasses": {
    "button": "ais-ClearRefinements-button",
    "disabledButton": "ais-ClearRefinements-button--disabled",
    "root": "ais-ClearRefinements",
  },
  "hasRefinements": false,
  "refine": [Function],
  "templateProps": {
    "templates": {
      "resetLabel": "Clear refinements",
    },
    "templatesConfig": {},
    "useCustomCompileOptions": {
      "resetLabel": false,
    },
  },
}
`;
